--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             <div class="controls">
                 <button onclick="playPrevious()" title="上一曲"><i class="fas fa-backward"></i></button>
                 <button onclick="playNext()" title="下一曲"><i class="fas fa-forward"></i></button>
+                <button onclick="playRandomOnline()" title="随便听听"><i class="fas fa-random"></i></button>
                 <audio id="audioPlayer" controls></audio>
             </div>
         </div>
@@ -198,6 +199,10 @@
         let currentAudioIndex = -1; // 当前播放的音乐索引
         let lyricsData = []; // 存储当前歌词时间和内容
         let currentLineIndex = -1; // 当前高亮的歌词行索引
+        let onlineSongs = []; // 存储在线歌曲列表
+        let currentOnlineSong = null; // 当前播放的在线歌曲信息
+        let currentOnlineIndex = -1; // 当前播放的在线歌曲索引
+        let onlineSongOffset = 0; // 新歌榜拉取的偏移量
 
         // 初始化拖放事件监听
         function setupDragAndDrop() {
@@ -299,7 +304,179 @@
             }
         }
 
-        // 播放指定索引的音乐
+        // 搜索歌词函数，调用网易云 API
+        async function searchLyrics(songName) {
+            const lyricsDiv = document.getElementById('lyrics');
+            lyricsDiv.innerHTML = '正在搜索歌词...';
+            try {
+                // 首先搜索歌曲，获取歌曲 ID
+                const searchResponse = await fetch('https://163-api.4444567.xyz/search?keywords=' + encodeURIComponent(songName));
+                const searchData = await searchResponse.json();
+                if (searchData.result && searchData.result.songs && searchData.result.songs.length > 0) {
+                    const songId = searchData.result.songs[0].id; // 取第一个搜索结果的 ID
+                    // 根据歌曲 ID 获取歌词
+                    const lyricResponse = await fetch('https://163-api.4444567.xyz/lyric?id=' + songId);
+                    const lyricData = await lyricResponse.json();
+                    if (lyricData.lrc && lyricData.lrc.lyric) {
+                        // 解析 LRC 格式歌词
+                        lyricsData = parseLrc(lyricData.lrc.lyric);
+                        let lyricsHTML = '';
+                        lyricsData.forEach((item, index) => {
+                            lyricsHTML += `<div id="lyric-line-${index}">${item.text}</div>`;
+                        });
+                        lyricsDiv.innerHTML = lyricsHTML || '歌词内容为空';
+                        currentLineIndex = -1; // 重置当前行
+                    } else {
+                        lyricsData = [];
+                        lyricsDiv.innerHTML = '未找到歌词。';
+                    }
+                } else {
+                    lyricsData = [];
+                    lyricsDiv.innerHTML = '未找到匹配的歌曲。';
+                }
+            } catch (error) {
+                console.error('搜索歌词失败:', error);
+                lyricsData = [];
+                lyricsDiv.innerHTML = '搜索歌词失败，请检查网络或 API 服务。';
+            }
+        }
+
+        // 获取网易云音乐新歌榜歌曲，每次拉取10首
+        async function fetchNewSongs() {
+            const playlistDiv = document.getElementById('playlist');
+            playlistDiv.innerHTML = '正在获取网易云新歌榜...';
+            console.log('尝试获取新歌榜，偏移量:', onlineSongOffset);
+            try {
+                // 尝试使用 /top/song 接口（新歌速递）
+                const response = await fetch(`https://163-api.4444567.xyz/top/song?type=0&limit=10&offset=${onlineSongOffset}`);
+                const data = await response.json();
+                console.log('新歌榜响应数据:', data);
+                if (data.data && data.data.length > 0) {
+                    onlineSongs = data.data;
+                    onlineSongOffset += 10; // 更新偏移量，下次拉取下一批
+                    let playlistHTML = '';
+                    onlineSongs.forEach((song, index) => {
+                        playlistHTML += `<div id="online-item-${index}" onclick="playOnlineSong(${index})">${song.name} - ${song.artists[0].name}</div>`;
+                    });
+                    playlistDiv.innerHTML = playlistHTML || '暂无歌曲。';
+                    console.log('新歌榜获取成功，歌曲数量:', onlineSongs.length);
+                    return true;
+                } else {
+                    console.log('未能获取新歌榜歌曲，尝试备用接口...');
+                    // 备用方案：使用 /top/list 接口
+                    const backupResponse = await fetch(`https://163-api.4444567.xyz/top/list?idx=0&limit=10&offset=${onlineSongOffset}`);
+                    const backupData = await backupResponse.json();
+                    console.log('备用接口响应数据:', backupData);
+                    if (backupData.playlist && backupData.playlist.tracks && backupData.playlist.tracks.length > 0) {
+                        onlineSongs = backupData.playlist.tracks;
+                        onlineSongOffset += 10; // 更新偏移量
+                        let playlistHTML = '';
+                        onlineSongs.forEach((song, index) => {
+                            playlistHTML += `<div id="online-item-${index}" onclick="playOnlineSong(${index})">${song.name} - ${song.ar[0].name}</div>`;
+                        });
+                        playlistDiv.innerHTML = playlistHTML || '暂无歌曲。';
+                        console.log('备用接口获取成功，歌曲数量:', onlineSongs.length);
+                        return true;
+                    } else {
+                        playlistDiv.innerHTML = '未能获取新歌榜歌曲。';
+                        onlineSongs = [];
+                        console.log('备用接口也失败，未能获取歌曲。');
+                        return false;
+                    }
+                }
+            } catch (error) {
+                console.error('获取新歌榜歌曲失败:', error);
+                playlistDiv.innerHTML = '获取新歌榜失败，请检查网络或 API 服务。';
+                onlineSongs = [];
+                return false;
+            }
+        }
+
+        // 随机播放网易云音乐（从新歌榜）
+        async function playRandomOnline() {
+            if (onlineSongs.length === 0) {
+                const success = await fetchNewSongs();
+                if (success && onlineSongs.length > 0) {
+                    const randomIndex = Math.floor(Math.random() * onlineSongs.length);
+                    playOnlineSong(randomIndex);
+                }
+            } else {
+                const randomIndex = Math.floor(Math.random() * onlineSongs.length);
+                playOnlineSong(randomIndex);
+            }
+        }
+
+        // 播放在线歌曲
+        async function playOnlineSong(index) {
+            if (index < 0 || index >= onlineSongs.length) return;
+
+            currentOnlineSong = onlineSongs[index];
+            currentOnlineIndex = index;
+            const audio = document.getElementById('audioPlayer');
+            const lyricsDiv = document.getElementById('lyrics');
+            lyricsDiv.innerHTML = '正在加载歌曲和歌词...';
+
+            try {
+                // 获取歌曲播放 URL
+                const songId = currentOnlineSong.id;
+                const urlResponse = await fetch(`https://163-api.4444567.xyz/song/url?id=${songId}&br=320000`);
+                const urlData = await urlResponse.json();
+                console.log('歌曲 URL 响应:', urlData);
+                if (urlData.data && urlData.data.length > 0 && urlData.data[0].url) {
+                    audio.src = urlData.data[0].url;
+                    audio.load();
+                    audio.play();
+
+                    // 更新播放列表高亮
+                    updateOnlinePlaylistHighlight(index);
+
+                    // 监听时间更新以实现歌词滚动
+                    audio.removeEventListener('timeupdate', syncLyrics);
+                    audio.addEventListener('timeupdate', syncLyrics);
+                    // 监听播放结束，自动播放下一曲
+                    audio.removeEventListener('ended', autoPlayNextOnline);
+                    audio.addEventListener('ended', autoPlayNextOnline);
+
+                    // 获取歌词
+                    const lyricResponse = await fetch(`https://163-api.4444567.xyz/lyric?id=${songId}`);
+                    const lyricData = await lyricResponse.json();
+                    console.log('歌词响应:', lyricData);
+                    if (lyricData.lrc && lyricData.lrc.lyric) {
+                        lyricsData = parseLrc(lyricData.lrc.lyric);
+                        let lyricsHTML = '';
+                        lyricsData.forEach((item, index) => {
+                            lyricsHTML += `<div id="lyric-line-${index}">${item.text}</div>`;
+                        });
+                        lyricsDiv.innerHTML = lyricsHTML || '歌词内容为空';
+                        currentLineIndex = -1; // 重置当前行
+                    } else {
+                        lyricsData = [];
+                        lyricsDiv.innerHTML = '未找到歌词。';
+                    }
+                } else {
+                    lyricsDiv.innerHTML = '无法获取歌曲播放地址。';
+                    console.log('无法获取歌曲播放地址。');
+                }
+            } catch (error) {
+                console.error('播放在线歌曲失败:', error);
+                lyricsDiv.innerHTML = '播放在线歌曲失败，请检查网络或 API 服务。';
+            }
+        }
+
+        // 更新在线播放列表高亮
+        function updateOnlinePlaylistHighlight(index) {
+            const playlistDiv = document.getElementById('playlist');
+            const items = playlistDiv.getElementsByTagName('div');
+            for (let i = 0; i < items.length; i++) {
+                if (i === index) {
+                    items[i].classList.add('current');
+                } else {
+                    items[i].classList.remove('current');
+                }
+            }
+        }
+
+        // 播放指定索引的本地音乐
         function playAudio(index) {
             if (index < 0 || index >= audioFiles.length) return;
 
@@ -326,7 +503,9 @@
             if (lyricsFile) {
                 loadLyricsFile(lyricsFile);
             } else {
-                // 如果没有本地歌词文件，则尝试读取嵌入歌词
+                // 如果没有本地歌词文件，尝试搜索网易云歌词
+                searchLyrics(baseName);
+                // 如果搜索失败，仍尝试读取嵌入歌词
                 readEmbeddedLyrics(audioFile, () => {
                     if (lyricsData.length === 0) {
                         document.getElementById('lyrics').innerHTML = '未找到对应歌词文件或嵌入歌词。';
@@ -337,7 +516,7 @@
             }
         }
 
-        // 更新播放列表高亮
+        // 更新本地播放列表高亮
         function updatePlaylistHighlight() {
             const playlistDiv = document.getElementById('playlist');
             const items = playlistDiv.getElementsByTagName('div');
@@ -364,9 +543,23 @@
             }
         }
 
-        // 播放结束后自动播放下一曲
+        // 播放结束后自动播放下一曲（本地）
         function autoPlayNext() {
             playNext();
+        }
+
+        // 播放结束后自动播放下一曲（在线）
+        async function autoPlayNextOnline() {
+            if (onlineSongs.length > 0) {
+                let nextIndex = (currentOnlineIndex + 1) % onlineSongs.length;
+                // 如果已经是最后一批歌曲的最后一首，则拉取新歌曲
+                if (nextIndex === 0) {
+                    const success = await fetchNewSongs();
+                    if (!success) return; // 如果拉取失败，停止播放
+                    nextIndex = 0; // 从新拉取的列表第一首开始播放
+                }
+                playOnlineSong(nextIndex);
+            }
         }
 
         // 读取音乐文件中的嵌入歌词（添加超时机制）
