--- a/index.html
+++ b/index.html
@@ -194,15 +194,16 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.7/jsmediatags.min.js"></script>
     <script>
-        let audioFiles = []; // 存储音乐文件列表
+        let audioFiles = []; // 存储本地音乐文件列表
         let lyricsFiles = {}; // 存储文件名对应的歌词文件
-        let currentAudioIndex = -1; // 当前播放的音乐索引
+        let currentAudioIndex = -1; // 当前播放的本地音乐索引
         let lyricsData = []; // 存储当前歌词时间和内容
         let currentLineIndex = -1; // 当前高亮的歌词行索引
         let onlineSongs = []; // 存储在线歌曲列表
-        let currentOnlineSong = null; // 当前播放的在线歌曲信息
         let currentOnlineIndex = -1; // 当前播放的在线歌曲索引
-        let onlineSongOffset = 0; // 新歌榜拉取的偏移量
+        let onlineSongOffset = 0; // 飙升榜拉取的偏移量
+        let isOnlineMode = false; // 是否为在线播放模式
+        let playedSongIds = new Set(); // 存储已播放或已拉取的歌曲ID，用于去重
 
         // 初始化拖放事件监听
         function setupDragAndDrop() {
@@ -341,66 +342,59 @@
             }
         }
 
-        // 获取网易云音乐新歌榜歌曲，每次拉取10首
-        async function fetchNewSongs() {
+        // 获取网易云音乐飙升榜歌曲，每次拉取20首，确保不重复
+        async function fetchSoaringListSongs() {
             const playlistDiv = document.getElementById('playlist');
-            playlistDiv.innerHTML = '正在获取网易云新歌榜...';
-            console.log('尝试获取新歌榜，偏移量:', onlineSongOffset);
+            playlistDiv.innerHTML = '正在获取网易云飙升榜歌曲...';
+            console.log('尝试获取飙升榜歌曲，偏移量:', onlineSongOffset);
             try {
-                // 尝试使用 /top/song 接口（新歌速递）
-                const response = await fetch(`https://163-api.4444567.xyz/top/song?type=0&limit=10&offset=${onlineSongOffset}`);
-                const data = await response.json();
-                console.log('新歌榜响应数据:', data);
-                if (data.data && data.data.length > 0) {
-                    onlineSongs = data.data;
-                    onlineSongOffset += 10; // 更新偏移量，下次拉取下一批
+                // 飙升榜ID为19723756
+                const songsResponse = await fetch(`https://163-api.4444567.xyz/playlist/detail?id=19723756&limit=20&offset=${onlineSongOffset}`);
+                const songsData = await songsResponse.json();
+                console.log('飙升榜歌曲响应数据:', songsData);
+                if (songsData.playlist && songsData.playlist.tracks && songsData.playlist.tracks.length > 0) {
+                    // 过滤掉已播放或已拉取的歌曲
+                    const newSongs = songsData.playlist.tracks.filter(song => !playedSongIds.has(song.id));
+                    // 更新已拉取歌曲ID集合
+                    newSongs.forEach(song => playedSongIds.add(song.id));
+                    // 如果没有新歌曲，增加偏移量继续拉取
+                    if (newSongs.length === 0) {
+                        onlineSongOffset += 20;
+                        return await fetchSoaringListSongs();
+                    }
+                    onlineSongs = newSongs; // 替换为新拉取的歌曲
+                    onlineSongOffset += 20; // 更新偏移量，下次拉取下一批
+
+                    // 更新播放列表显示
                     let playlistHTML = '';
                     onlineSongs.forEach((song, index) => {
-                        playlistHTML += `<div id="online-item-${index}" onclick="playOnlineSong(${index})">${song.name} - ${song.artists[0].name}</div>`;
+                        playlistHTML += `<div id="online-item-${index}" onclick="playOnlineSong(${index})">${song.name} - ${song.ar[0].name}</div>`;
                     });
                     playlistDiv.innerHTML = playlistHTML || '暂无歌曲。';
-                    console.log('新歌榜获取成功，歌曲数量:', onlineSongs.length);
+                    console.log('飙升榜歌曲获取成功，歌曲数量:', onlineSongs.length);
                     return true;
                 } else {
-                    console.log('未能获取新歌榜歌曲，尝试备用接口...');
-                    // 备用方案：使用 /top/list 接口
-                    const backupResponse = await fetch(`https://163-api.4444567.xyz/top/list?idx=0&limit=10&offset=${onlineSongOffset}`);
-                    const backupData = await backupResponse.json();
-                    console.log('备用接口响应数据:', backupData);
-                    if (backupData.playlist && backupData.playlist.tracks && backupData.playlist.tracks.length > 0) {
-                        onlineSongs = backupData.playlist.tracks;
-                        onlineSongOffset += 10; // 更新偏移量
-                        let playlistHTML = '';
-                        onlineSongs.forEach((song, index) => {
-                            playlistHTML += `<div id="online-item-${index}" onclick="playOnlineSong(${index})">${song.name} - ${song.ar[0].name}</div>`;
-                        });
-                        playlistDiv.innerHTML = playlistHTML || '暂无歌曲。';
-                        console.log('备用接口获取成功，歌曲数量:', onlineSongs.length);
-                        return true;
-                    } else {
-                        playlistDiv.innerHTML = '未能获取新歌榜歌曲。';
-                        onlineSongs = [];
-                        console.log('备用接口也失败，未能获取歌曲。');
-                        return false;
-                    }
+                    playlistDiv.innerHTML = '未能获取飙升榜歌曲。';
+                    console.error('未能获取飙升榜歌曲，数据为空。');
+                    // 如果没有更多歌曲，重置偏移量，从头开始（避免无限循环）
+                    onlineSongOffset = 0;
+                    playedSongIds.clear(); // 清空已播放记录，允许重复
+                    return false;
                 }
             } catch (error) {
-                console.error('获取新歌榜歌曲失败:', error);
-                playlistDiv.innerHTML = '获取新歌榜失败，请检查网络或 API 服务。';
-                onlineSongs = [];
+                console.error('获取飙升榜歌曲失败:', error);
+                playlistDiv.innerHTML = '获取飙升榜歌曲失败，请检查网络或 API 服务。';
                 return false;
             }
         }
 
-        // 随机播放网易云音乐（从新歌榜）
+        // 随机播放网易云音乐（从飙升榜），每次点击更新20首新歌曲
         async function playRandomOnline() {
-            if (onlineSongs.length === 0) {
-                const success = await fetchNewSongs();
-                if (success && onlineSongs.length > 0) {
-                    const randomIndex = Math.floor(Math.random() * onlineSongs.length);
-                    playOnlineSong(randomIndex);
-                }
-            } else {
+            isOnlineMode = true;
+            onlineSongs = []; // 清空当前歌曲列表
+            currentOnlineIndex = -1; // 重置当前播放索引
+            const success = await fetchSoaringListSongs(); // 拉取新的20首歌曲
+            if (success && onlineSongs.length > 0) {
                 const randomIndex = Math.floor(Math.random() * onlineSongs.length);
                 playOnlineSong(randomIndex);
             }
@@ -410,15 +404,15 @@
         async function playOnlineSong(index) {
             if (index < 0 || index >= onlineSongs.length) return;
 
-            currentOnlineSong = onlineSongs[index];
             currentOnlineIndex = index;
+            isOnlineMode = true;
             const audio = document.getElementById('audioPlayer');
             const lyricsDiv = document.getElementById('lyrics');
             lyricsDiv.innerHTML = '正在加载歌曲和歌词...';
 
             try {
-                // 获取歌曲播放 URL
-                const songId = currentOnlineSong.id;
+                // 获取歌曲播放 URL，设置高音质 (br=320000)
+                const songId = onlineSongs[index].id;
                 const urlResponse = await fetch(`https://163-api.4444567.xyz/song/url?id=${songId}&br=320000`);
                 const urlData = await urlResponse.json();
                 console.log('歌曲 URL 响应:', urlData);
@@ -434,8 +428,8 @@
                     audio.removeEventListener('timeupdate', syncLyrics);
                     audio.addEventListener('timeupdate', syncLyrics);
                     // 监听播放结束，自动播放下一曲
-                    audio.removeEventListener('ended', autoPlayNextOnline);
-                    audio.addEventListener('ended', autoPlayNextOnline);
+                    audio.removeEventListener('ended', autoPlayNext);
+                    audio.addEventListener('ended', autoPlayNext);
 
                     // 获取歌词
                     const lyricResponse = await fetch(`https://163-api.4444567.xyz/lyric?id=${songId}`);
@@ -456,10 +450,14 @@
                 } else {
                     lyricsDiv.innerHTML = '无法获取歌曲播放地址。';
                     console.log('无法获取歌曲播放地址。');
+                    // 跳到下一首
+                    playNext();
                 }
             } catch (error) {
                 console.error('播放在线歌曲失败:', error);
                 lyricsDiv.innerHTML = '播放在线歌曲失败，请检查网络或 API 服务。';
+                // 跳到下一首
+                playNext();
             }
         }
 
@@ -482,6 +480,7 @@
 
             // 更新当前播放索引和高亮
             currentAudioIndex = index;
+            isOnlineMode = false;
             updatePlaylistHighlight();
 
             const audioFile = audioFiles[index];
@@ -531,34 +530,54 @@
 
         // 播放上一曲
         function playPrevious() {
-            if (currentAudioIndex > 0) {
-                playAudio(currentAudioIndex - 1);
+            if (isOnlineMode) {
+                if (currentOnlineIndex > 0) {
+                    playOnlineSong(currentOnlineIndex - 1);
+                }
+            } else {
+                if (currentAudioIndex > 0) {
+                    playAudio(currentAudioIndex - 1);
+                }
             }
         }
 
         // 播放下一曲
         function playNext() {
-            if (currentAudioIndex < audioFiles.length - 1) {
-                playAudio(currentAudioIndex + 1);
+            if (isOnlineMode) {
+                if (currentOnlineIndex < onlineSongs.length - 1) {
+                    playOnlineSong(currentOnlineIndex + 1);
+                } else {
+                    // 如果已经是列表最后一首，则拉取新歌曲
+                    fetchSoaringListSongs().then(success => {
+                        if (success) {
+                            playOnlineSong(0); // 播放新拉取的第一首歌曲
+                        }
+                    });
+                }
+            } else {
+                if (currentAudioIndex < audioFiles.length - 1) {
+                    playAudio(currentAudioIndex + 1);
+                }
             }
         }
 
-        // 播放结束后自动播放下一曲（本地）
+        // 播放结束后自动播放下一曲
         function autoPlayNext() {
-            playNext();
-        }
-
-        // 播放结束后自动播放下一曲（在线）
-        async function autoPlayNextOnline() {
-            if (onlineSongs.length > 0) {
-                let nextIndex = (currentOnlineIndex + 1) % onlineSongs.length;
-                // 如果已经是最后一批歌曲的最后一首，则拉取新歌曲
-                if (nextIndex === 0) {
-                    const success = await fetchNewSongs();
-                    if (!success) return; // 如果拉取失败，停止播放
-                    nextIndex = 0; // 从新拉取的列表第一首开始播放
+            if (isOnlineMode) {
+                if (currentOnlineIndex < onlineSongs.length - 1) {
+                    playOnlineSong(currentOnlineIndex + 1);
+                } else {
+                    // 如果已经是列表最后一首，则拉取新歌曲
+                    fetchSoaringListSongs().then(success => {
+                        if (success) {
+                            playOnlineSong(0); // 播放新拉取的第一首歌曲
+                        }
+                    });
                 }
-                playOnlineSong(nextIndex);
+            } else {
+                if (currentAudioIndex < audioFiles.length - 1) {
+                    playAudio(currentAudioIndex + 1);
+                }
             }
         }
 
